# HOPE

./: .gitignore  CHECKPOINT_GUIDE.md  Cargo.toml  IMPLEMENTATION_SUMMARY.md  INSTALL_BUILD_TOOLS.md  LEARNING_MECHANISMS.md  README.md  TRAINING_TIME_ESTIMATE.md  test_checkpoint.ps1
doc/: BOOK_TRAINING_GUIDE.md  CHECKPOINT_GUIDE.md  TEST_RESULTS.md
examples/: config_hope.json  config_hope_fast.json  config_minimal.json  config_with_books.json  config_with_checkpoint.json  train_hope.sh
scripts/: preprocess_books.rs
src/: config.rs  lib.rs  main.rs
src/checkpoint/: mod.rs  record.rs
src/data/: book_loader.rs  loader.rs  mod.rs  text_loader.rs  tokenizer.rs
src/model/: continuum_mem.rs  hope.rs  mod.rs  optimizer.rs  self_modify.rs
src/training/: mod.rs  trainer.rs
src/utils/: epub_parser.rs  mod.rs  ocr.rs  pdf_parser.rs  text_processor.rs
