[package]
name = "hope-model"
version = "0.1.0"
edition = "2021"
authors = ["HOPE Model Devs"]
license = "Apache-2.0"

[features]
default = []
wgpu-backend = ["burn-wgpu"]
tch-backend = ["burn-tch"]

[dependencies]
burn = { version = "0.19", default-features = false, features = ["autodiff", "ndarray"] }
burn-ndarray = "0.19"
burn-wgpu = { version = "0.19", optional = true }
burn-tch = { version = "0.19", optional = true }
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
rand = "0.8"
bincode = "1.3"
walkdir = "2.4"
regex = "1.10"
pdf-extract = "0.7"
epub = "2.0"
image = "0.24"

[[bin]]
name = "hope-train"
path = "src/main.rs"

[[bin]]
name = "preprocess-books"
path = "scripts/preprocess_books.rs"

[lib]
name = "hope_model"
path = "src/lib.rs"pts/preprocess_books.rs"

[lib]
name = "hope_model"
path = "src/lib.rs"

[package]
name = "hope-model"
version = "0.1.0"
edition = "2021"
authors = ["HOPE Model Devs"]
license = "Apache-2.0"

[features]
default = []
wgpu-backend = ["burn-wgpu"]
tch-backend = ["burn-tch"]

[dependencies]
# Burn framework
burn = { version = "0.19", default-features = false, features = ["autodiff", "ndarray"] }
burn-ndarray = "0.19"
burn-wgpu = { version = "0.19", optional = true }
burn-tch = { version = "0.19", optional = true }

# Utilities
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
rand = "0.8"
bincode = "1.3"
walkdir = "2.4"
regex = "1.10"
pdf-extract = "0.7"
epub = "2.0"
image = "0.24"

[[bin]]
name = "hope-train"
path = "src/main.rs"

[[bin]]
name = "preprocess-books"
path = "scripts/preprocess_books.rs"

[lib]
name = "hope_model"
path = "src/lib.rs"


